--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -63,4 +63,12 @@ dependencies {
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
 
+    def preference_version = "1.1.1"
+
+    // Java language implementation
+    implementation "androidx.preference:preference:$preference_version"
+    // Kotlin
+    implementation "androidx.preference:preference-ktx:$preference_version"
+
+
 }
